[#50] Fix buttons when the title is too large to fit on a single line

--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,15 @@ strong, b {
     color: #666;
     font-family: "Open Sans", sans-serif;
     padding-left:0;/*30px;*/
-    padding-bottom: 17px;
+    padding-bottom: 10px;
     margin: 9px 0 19px 0;
     border-bottom: 1px solid #efefef;
+    overflow: hidden;
+}
+
+.page-title .btn-toolbar {
+  margin-bottom: 0;
+  text-align: right;
 }
 
 .intro-text{
